tests/invalid/unary_plus_list_magic/main.py
def run_case() -> None:
    +[]

if __name__ == "__main__":
    run_case()
